--- a/config/database.yml
+++ b/config/database.yml
@@ -13,9 +13,9 @@ default: &default
   adapter: mysql2
   encoding: utf8
   pool: 5
-  username: ENV['username']
-  password: <%= ENV['CHAT_SPACE_DATABASE_PASSWORD'] %>
-  socket: /var/lib/mysql/mysql.sock
+  username: root
+  password:
+  socket: /tmp/mysql.sock
 
 development:
   <<: *default
@@ -52,4 +52,5 @@ production:
   database: chat-space_production
   username: ENV['username']
   password: <%= ENV['CHAT_SPACE_DATABASE_PASSWORD'] %>
+  socket: /var/lib/mysql/mysql.sock
   host: localhost
