--- a/config/database.yml
+++ b/config/database.yml
@@ -50,7 +50,7 @@ test:
 production:
   <<: *default
   database: chat-space_production
-  username: ENV['USERNAME']
+  username: ENV['USER_NAME']
   password: <%= ENV['CHAT_SPACE_DATABASE_PASSWORD'] %>
   socket: /var/lib/mysql/mysql.sock
   host: localhost
